# mangler

./: .clang-format  .gitignore  CMakeLists.txt  README.md
demo/: keyval_proto.c  keyval_proto.h  keyval_server.c
demo/v1/: Makefile  keyval_client.c
demo/v2/: keyval_client.c  keyval_proto.c  keyval_proto.h  keyval_server.c
include/: common.h  plugin.h
plugins/: appendstr.c  dummy.c  flipbits.c  keyvalflip.c  plugins.c  random.c  replace.c
src/: main.c
